modules/security-groups/main.tf
#jenkins security group

resource "aws_security_group" "jenkins_sg" {
  name        = "${var.project_name}-jenkins-sg"
  description = "Security group for jenkins"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH Access"

    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [var.my_ip]
  }

  ingress {
    description = "Jenkins UI"

    from_port = 8080
    to_port   = 8080
    protocol  = "tcp"

    cidr_blocks = [var.my_ip]
  }

   egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-jenkins-sg"
  }
}

#ALB Security group

resource "aws_security_group" "alb-sg" {
  name        = "${var.project_name}-alb-sg"
  description = "security group for load balancer"
  vpc_id      = var.vpc_id

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = -1

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-alb-sg"
  }
}

#ECS security group

resource "aws_security_group" "ecs-sg" {
  vpc_id = var.vpc_id
  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    security_groups = [aws_security_group.alb-sg.id]
  }

  tags = {
    Name = "${var.project_name}-ecs-sg"
  }

}
